# GeneralsX

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakeLists_test.txt  CMakePresets.json  CONTRIBUTING.md  FINAL_SUMMARY.md  GeneralsXZH.dxvk-cache  LINUX_BUILD.md  MACOS_BUILD.md  MACOS_PORT.md  MULTITHREADING_ANALYSIS.md  NEXT_STEPS.md  NEXT_STEPS.md.backup  OPENGL_MIGRATION.md  OPENGL_PROGRESS_REPORT.md  OPENGL_SUCCESS_REPORT.md  OPENGL_SUMMARY.md  OPENGL_TESTING_GUIDE.md  PHASE06_DETAILED_ROADMAP.md  PHASE06_QUICK_REFERENCE.md  PHASE27_BACKPORT_GUIDE.md  PHASE_23_4_PROGRESS.md  README.md  REFERENCES.md  SYMBOL_FIX_BATCH_STRATEGY.md  TESTING.md  TEST_ORGANIZATION_SUMMARY.md  WIKI_SCHEMA.md  WIKI_SCHEMA_PART2.md  WIKI_SCHEMA_PART3.md  WINDOWS_SETUP_COMPLETE.md  binkstub.c  claude.instructions.md  cmake_output.txt  debug_script.lldb  dxvk.conf  run_phase38_5_test.sh  (+14 more)
Core/GameEngineDevice/: CMakeLists.txt
Core/GameEngineDevice/Include/Audio/: OpenALAudioManager.h
Core/GameEngineDevice/Include/AudioDevice/: AudioDevice.h  AudioDeviceFactory.h  OpenALAudioManager.h  OpenALDevice.h
Core/GameEngineDevice/Include/GraphicsDevice/: GraphicsDevice.h  GraphicsDeviceFactory.h  RenderState.h  VulkanBuffer.h  VulkanDevice.h  VulkanMemoryAllocator.h  VulkanPipeline.h  VulkanRenderPass.h  VulkanSwapchain.h  VulkanTexture.h  vulkan_stubs.h
Core/GameEngineDevice/Include/MilesAudioDevice/: MilesAudioManager.h
Core/GameEngineDevice/Include/MiniAudioDevice/: MiniAudioManager.h  MiniAudioStream.h
Core/GameEngineDevice/Include/OpenALAudioDevice/: OpenALAudioManager.h
Core/GameEngineDevice/Include/OpenALDevice/: OpenALAudioLoader.h  OpenALAudioManager.h
Core/GameEngineDevice/Include/SDL2AudioDevice/: SDL2AudioBackend.h  SDL2AudioMixer.h  SDL2AudioStreamManager.h  SDL2MilesAudioSource.h  SDL2MilesCompat.h
Core/GameEngineDevice/Source/Audio/: OpenALAudioDevice.cpp  OpenALAudioManager.cpp  OpenALAudioStream.cpp
Core/GameEngineDevice/Source/AudioDevice/: AudioDeviceFactory.cpp  OpenALAudioManager.cpp  OpenALDevice.cpp
Core/GameEngineDevice/Source/GraphicsDevice/: GraphicsDeviceFactory.cpp  VulkanBuffer.cpp  VulkanDevice.cpp  VulkanSwapchain.cpp  VulkanTexture.cpp
Core/GameEngineDevice/Source/MilesAudioDevice/: MilesAudioManager.cpp
Core/GameEngineDevice/Source/MiniAudioDevice/: MiniAudioManager.cpp  MiniAudioStream.cpp
Core/GameEngineDevice/Source/OpenALAudioDevice/: OpenALAudioCache.cpp  OpenALAudioManager.cpp  OpenALAudioStream.cpp
Core/GameEngineDevice/Source/OpenALDevice/: OpenALAudioLoader.cpp  OpenALAudioManager.cpp
Core/GameEngineDevice/Source/Optimization/: AutomaticMeshBatcher.h  BatchOptimizationApplier.cpp  BatchOptimizationApplier.h  CMakeLists.txt  MemoryCompactor.cpp  OptimizationMonitor.cpp  OptimizationRecommender.cpp  OptimizationScheduler.cpp  OptimizationValidator.cpp  OptimizationValidator.h  PerformanceOptimizer.cpp  PerformanceOptimizer.h  ProfilerDataAggregator.cpp  ProfilerDataAggregator.h  RegressionDetector.cpp  ReportGenerator.cpp  ReportGenerator.h  ShaderOptimizer.cpp  TrendAnalyzer.cpp  TrendAnalyzer.h
Core/GameEngineDevice/Source/SDL2AudioDevice/: SDL2AudioBackend.cpp  SDL2AudioMixer.cpp  SDL2AudioStreamManager.cpp  SDL2MilesAudioSource.cpp
Core/Libraries/: CMakeLists.txt
Core/Libraries/DX90SDK/Include/: D3DX10.h  D3DX11.h  DXGIType.h  DxErr.h  PIXPlugin.h  X3DAudio.h  XAPOBase.h
Core/Libraries/Include/: atlbase.h  config_init.h  config_manager.h  direct.h  excpt.h  imagehlp.h  ini_parser.h  lmcons.h  mmsystem.h  objbase.h  ocidl.h  process.h  shellapi.h  shlguid.h  shlobj.h  snmp.h  tchar.h  windows.h  winerror.h  winsock.h
Core/Libraries/Include/GraphicsAPI/: GraphicsRenderer.h  OpenGLRenderer.h  OpenGLRendererW3D.h  W3DRendererAdapter.h  W3DTypes.h  W3DTypesMinimal.h  W3DTypesReal.h
Core/Libraries/Include/Lib/: BaseType.h  BaseTypeCore.h
Core/Libraries/Include/glad/: glad.h
Core/Libraries/Source/Compression/: CMakeLists.txt  CompressionManager.cpp
Core/Libraries/Source/Graphics/: CMakeLists.txt  DRIVER_ARCHITECTURE.md  GraphicsDriverFactory.cpp  GraphicsDriverFactory.h  IGraphicsDriver.h  dx8buffer_compat.cpp  dx8buffer_compat.h  phase41_cpp_stubs.cpp  phase41_final_stubs.cpp  phase41_global_stubs.cpp  phase41_missing_implementations.cpp  phase41_texture_stubs_extended.cpp
Core/Libraries/Source/GraphicsAPI/: CMakeLists.txt  GraphicsRenderer.cpp  OpenGLRenderer.cpp  OpenGLRendererW3D.cpp  W3DRendererAdapter.cpp
Core/Libraries/Source/debug/: CMakeLists.txt  (+16 more)
Dependencies/Utility/: CMakeLists.txt
Dependencies/Utility/Compat/: SDL2_Events.h  d3d8.h  immintrin.h  malloc.h  msvc_posix_compat.cpp  msvc_types_compat.h  osdep.h  stdint.h  windows.h
Dependencies/Utility/Utility/: CppMacros.h  compat.h  comsupp_compat.h  endian_compat.h  interlocked_adapter.h  intrin_compat.h  stdint_adapter.h  string_compat.h  thread_compat.h  time_compat.h  wchar_compat.h  windows.h
Generals/: CMakeLists.txt
Generals/Code/: CMakeLists.txt
Generals/Code/GameEngine/: CMakeLists.txt
Generals/Code/GameEngineDevice/: CMakeLists.txt
Generals/Code/Main/: CMakeLists.txt  LinuxStubs.cpp  RTS.RC  SDL3Main.cpp  Win64LinkCompat.cpp  WinMain.cpp  WinMain.h  main_posix.cpp
GeneralsMD/: CMakeLists.txt
GeneralsMD/Code/: CMakeLists.txt
GeneralsMD/Code/CompatLib/: CMakeLists.txt
GeneralsMD/Code/GameEngine/: CMakeLists.txt
GeneralsMD/Code/GameEngineDevice/: CMakeLists.txt
GeneralsMD/Code/Main/: CMakeLists.txt  LinuxStubs.cpp  RTS.RC  SDL2Main.cpp  SDL2Main.h  SDL3Main.cpp  WinMain.cpp  WinMain.h  main_posix.cpp  phase43_registry_stubs.cpp
Patches/SagePatch/: CMakeLists.txt
Patches/SagePatch/resources/: Override.ini
Patches/SagePatch/src/: Init.cpp
Tests/: CMakeLists.txt  MatrixTests.cpp  PathUtilTests.cpp  QuatTests.cpp  VectorTests.cpp
resources/: CMakeLists.txt
resources/dockerbuild/: Dockerfile.linux
resources/gitinfo/: git_watcher.cmake  gitinfo.cpp.in  gitinfo.h
resources/shaders/: basic.frag  basic.metal  basic.vert
tests/phase49/: CMakeLists.txt  phase49_colored_quad_test.cpp  quad_implementation.txt
(+4245 files in other folders)
